--- a/gallery.html
+++ b/gallery.html
@@ -177,12 +177,7 @@
   </div>
 </div>
 
-<body>
-  <div class="page-wrapper">
-
-    
-  </div>
-</body>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <!-- FOOTER -->
 <footer class="site-footer">
@@ -190,15 +185,22 @@
     <span class="footer-logo">kunhvac_id</span>
 
     <div class="social-icons">
-      <a href="https://youtube.com/@kunhvac_id" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-      <a href="https://www.instagram.com/kunhvac_id" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.tiktok.com/@kunhvac_id" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
-      <a href="https://discord.gg/2QsVysZHJW" target="_blank"><i class="fa-brands fa-discord"></i></a>
-    </div>
+  <a href="https://youtube.com/@kunhvac_id" target="_blank" aria-label="YouTube">
+    <i class="fa-brands fa-youtube"></i>
+    </a>
+  <a href="https://www.instagram.com/kunhvac_id?igsh=MXE5cGNsOWl3OXd5aw==" target="_blank" aria-label="Instagram">
+    <i class="fa-brands fa-instagram"></i>
+    </a>
+  <a href="https://www.tiktok.com/@kunhvac_id?_t=ZS-8sze2pMPyp6&_r=1" target="_blank" aria-label="TikTok">
+    <i class="fa-brands fa-tiktok"></i>
+    </a>
+  <a href="https://discord.gg/2QsVysZHJW" target="_blank" aria-label="Discord">
+    <i class="fa-brands fa-discord"></i>
+  </a>
+</div>
+
   </div>
-
-  <hr>
-
+  <hr />
   <div class="footer-bottom">
     <p>© 2026 kunhvac_id | All Rights Reserved.</p>
   </div>
